<resources>
    <string name="app_name">Workout Planer</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regular_exercise_name"><u>Regular exercise name</u></string>
    <string name="question_mark">\?</string>
    <string name="go_to_exercises">Go to exercises</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="username">Username</string>
    <string name="cnfrmEmail">Confirm email</string>
    <string name="cnfrmPassword">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="workouts">Workouts</string>
    <string name="pedometer">Pedometer</string>
    <string name="logout">Logout</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="empty_view">In order to create Workout click the Floating button</string>
    <string name="empty_day_view">In order to create a Day, click the Floating button</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_app_id">417037106750570</string>
    <string name="fb_login_protocol_scheme">fb417037106750570</string>

</resources>